# shield

./: Kconfig  LICENSE  README.md  REUSE.toml  meson.build  meson.options  requirements.txt  sonar-project.properties
.github/workflows/: build.yml  codequal.yml  deploydoc.yaml  reuse.yml
configs/: defconfig  meson.build
doc/: meson.build
doc/mans/: meson.build
doc/shield/: conf.py  index.rst
doc/shield/build_system/: index.rst  shield_build.rst
doc/shield/concepts/: index.rst  initial.rst  security.rst
doc/shield/posix/: index.rst  model.rst  pse51.rst
doc/shield/posix/pse51/: clock_gettime.rst  getrandom.rst  htonl.rst  htons.rst  kill.rst  memcpy.rst  memset.rst  meson.build  msgget.rst  msgrcv.rst  msgsnd.rst  nanosleep.rst  ntohl.rst  ntohs.rst  pthread_self.rst  rand.rst  rand_r.rst  sigaddset.rst  sigdelset.rst  sigemptyset.rst  sigfillset.rst  sigismember.rst  sigpending.rst  snprintf.rst  srand.rst  strcat.rst  strcmp.rst  strcpy.rst  strlen.rst  strnlen.rst  timer_create.rst  timer_gettime.rst  timer_settime.rst
doc/shield/tests/: formal.rst  index.rst  unittests.rst
doc/sphinx/: Doxyfile  conf.py  deps.rst  index.rst
examples/thumbv7-nobackend/: .config
examples/thumbv7-sentry/: .config
include/: meson.build  stdlib.h
include/shield/: errno.h  meson.build  pthread.h  signal.h  stdio.h  stdlib.h  string.h  time.h
include/shield/arpa/: inet.h  meson.build
include/shield/sys/: meson.build  msg.h  random.h
include/xxx/: xxx.h
lnk/: app.ld  linkerscript.ld  linkerscript.ld.in
rust/: .gitignore  Cargo.toml
rust/examples/: hello_world.rs  simple_main.rs
rust/macros/: Cargo.toml
rust/macros/src/: lib.rs
rust/src/: lib.rs  print.rs  process.rs  shm.rs
rust/src/system/: mod.rs  startup.rs
src/: abs.c  assert.c  errno.c  meson.build  printf.c  printf_lexer.c  printf_lexer.h  pthread.c  rand.c  signal.c  string.c  time.c  xxx.c
src/arpa/: inet.c
src/c/: errno.c  errno.h  meson.build  pthread.c  string.c
src/c/arpa/: inet.c
src/c/entrypoint/: libc_init.c  thread_init.c
src/c/support/: sentry.c
src/entrypoint/: libc_init.c  libc_init.h  thread_init.c
src/include/: meson.build
src/include/shield/private/: coreutils.h  errno.h  meson.build  rand.h  sort.h  timer.h
src/support/: sentry.c  sentry.h
src/sys/: msg.c
subprojects/: package-metadata.wrap  sentry.wrap
tests/: meson.build
tests/test_string/: meson.build  test_string.cpp
tests/test_xxx/: meson.build  test_xxx.cpp
