# SPDX-FileCopyrightText: 2024 Ledger SAS
#
# SPDX-License-Identifier: Apache-2.0 OR BSD-3-Clause

[package]
name = "shield"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR BSD-3-Clause"

[dependencies]
shield-macros = { path = "macros", version="0.1" }
sentry-uapi = { git = "https://github.com/r3dlight/sentry-kernel.git", branch="main"}
#sentry-uapi = { git = "https://github.com/r3dlight/sentry-kernel.git", branch="main", version="0.4" }
