# SPDX-FileCopyrightText: 2023 Ledger SAS
# SPDX-License-Identifier: LicenseRef-LEDGER

# headers used at libshield compile time only, not exported nor installed
# their usage is dedicated to libshield sources (not exported headers),
# using <shield/private/xxx.h> path
shield_private_inc = include_directories('.')

shield_private_headers = []
subdir('shield/private')
