# SPDX-FileCopyrightText: 2023-2024 Ledger SAS
# SPDX-License-Identifier: LicenseRef-LEDGER

posix_api = files(
   'sigpending.rst',
   'kill.rst',
   'sigfillset.rst',
   'timer_gettime.rst',
   'strcpy.rst',
   'memcpy.rst',
   'htons.rst',
   'sigaddset.rst',
   'htonl.rst',
   'msgget.rst',
   'sigismember.rst',
   'timer_create.rst',
   'sigemptyset.rst',
   'clock_gettime.rst',
   'nanosleep.rst',
   'pthread_self.rst',
   'sigdelset.rst',
   'memset.rst',
   'getrandom.rst',
   'timer_settime.rst',
   'strnlen.rst',
   'msgsnd.rst',
   'msgrcv.rst',
   'ntohl.rst',
   'ntohs.rst',
   'printf.rst',
   'snprintf.rst',
   'strcat.rst',
   'strlen.rst',
   'strcmp.rst',
   'rand.rst',
   'srand.rst',
   'rand_r.rst',
)
